--- a/test.html
+++ b/test.html
@@ -6,10 +6,7 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>Hello</h1>
-  <h2>Hello, there</h2>
-  <h3>Hello, World</h3>
-  <h4>Hi</h4>
+  <h1>Amr</h1>
 
 </body>
 </html>
